--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Home | Apeperia</title>
 </head>
 <body>
+    <header>
+        <img src="" alt="Logo da Apeperia">
+        <nav>
+            <ul>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Planos</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Destaques</a></li>
+                <li><a href="#">Institucional</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
