--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <h1>Aplicativos Na Medida</h1>
+            <p>Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
+            <a href="#">Conheça os planos</a>
+        </section>
+    </main>
     
 </body>
 </html>
