--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/chamada.css">
     <link rel="stylesheet" href="css/destaques.css">
+    <link rel="stylesheet" href="css/diferenciais.css">
+    <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="css/planos.css">
 </head>
 <body>
@@ -53,21 +55,21 @@
 
         <section class="diferenciais container">
             <ul class="diferenciais__lista">
-                <li class="diferenciais__item">
+                <li class="diferenciais__item diferenciais__item--tempo">
                     <h2 class="item__titulo">Tempo</h2>
                     <p class="item__texto">Tempo é importante! Trabalhamos em ritmo acelerado, atendendo rigorosamente aos prazos.</p>
                 </li>
-                <li class="diferenciais__item">
+                <li class="diferenciais__item diferenciais__item--foco">
                     <h2 class="item__titulo">Foco</h2>
                     <p class="item__texto">Focamos no empreendimento! Oferecemos serviços de qualidade com preços acessíveis.</p>
                 </li>
-                <li class="diferenciais__item">
+                <li class="diferenciais__item diferenciais__item--especialistas">
                     <h2 class="item__titulo">Especialistas</h2>
                     <p class="item__texto">Equipe experiente e especializada! Testamos todos os produtos antes do lançamento.</p>
                 </li>
             </ul>
         </section>
-        
+
         <section class="sobre container">
             <div class="sobre__conteudo">
                 <h2 class="sobre__titulo">Sobre</h2>
