--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="css/diferenciais.css">
     <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="css/planos.css">
+    <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="css/institucional.css">
+    <link rel="stylesheet" href="css/rodape.css">
 </head>
 <body>
     <header class="cabecalho container">
@@ -132,7 +135,41 @@
             <a href="contato.html" class="contato__botao botao">Entre em contato</a>
         </section>
 
+        <section class="institucional container">
+            <h2 class="institucional__titulo">Institucional</h2>
+            <p class="institucional__descricao">Um pouco mais sobre Apeperia</p>
+            <address class="institucional__endereco">
+                Rua Vergueiro, 3185<br>
+                Vila Mariana, São Paulo
+                <article class="institucional__contato">
+                    <p>
+                        <a href="tel:+55712751" class="institucional__contato-telefone">(11) 5571-2751</a> ou
+                        <a href="mailto:contato@apeperia.com" class="institucional__contato-email">o@apeperia.com</a>
+                    </p>
+                </article>
+            </address>
+            <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
+        </section>
+
     </main>
+    <footer class="rodape container">
+        <img src="img/logo-apeperia.svg" alt="Logo da Apeparia" class="rodape__logo">
+        <ul class="rodape__social">
+            <li><a href="#" class="rodape__midia"><img src="img/facebook.png" alt="Ícone do Facebook"></a></li>
+            <li><a href="#" class="rodape__midia"><img src="img/twitter.png" alt="Ícone do Twitter"></a></li>
+            <li><a href="#" class="rodape__midia"><img src="img/instagram.png" alt="Ícone do Instagram"></a></li>
+        </ul>
+        <nav>
+            <ul class="rodape__navegacao">
+                <li class="rodape__link"><a href="#">Sobre</a></li>
+                <li class="rodape__link"><a href="#">Planos</a></li>
+                <li class="rodape__link"><a href="#">Blog</a></li>
+                <li class="rodape__link"><a href="#">Destaques</a></li>
+                <li class="rodape__link"><a href="#">Institucional</a></li>
+                <li class="rodape__link"><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </footer>
     
 </body>
 </html>
